mychart/templates/np.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: np
spec:
  podSelector:
    matchLabels:
      run: nginx
  ingress:
  - from:
    - podSelector: 
        matchLabels:
          access: 'true'
